--- a/portofolio.html
+++ b/portofolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portofolio</title>
     <link rel="stylesheet" href="Tugas_portofolio/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -48,8 +48,9 @@
                     <h3 class="pre-tittle">Hey! lets get to know myself</h3>
                     <h1 class="hero-name">Fahreza <span> Yudistira</span> </h1>
                     <p>
-                        saya adalah seorang mahasiswa yang menempuh Pendidikan di S1 Teknik informatika Universitas
-                        Negeri Surabaya. Saya memiliki minat yang tinggi terhadap pengembangan web dan aplikasi
+                       Hai! Saya Muhammad Fahreza Yudistira, seorang mahasiswa Informatika yang memiliki ketertarikan pada Software Development dan web design.
+                        Saya senang membuat proyek yang memadukan kreativitas dan logika — terutama menggunakan HTML, CSS, JavaScript, dan C++.
+                        Di luar dunia pemrograman, saya juga suka mempelajari prinsip desain, menjelajahi inovasi teknologi, serta berkolaborasi dalam proyek kelompok yang melatih kemampuan berpikir kritis saya.
                     </p>
                     
                 </div>
@@ -93,7 +94,7 @@
 
 
 
-
+                <!-- service 2 -->
                 <div class="service1">
                     <div class="service-icon">
                         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
@@ -107,7 +108,7 @@
                 </div>
 
 
-
+                <!-- service 3 -->
                 <div class="service1 ">
                     <div class="service-icon">
                         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
@@ -191,7 +192,7 @@
                 <div class="card" >
                     <img src="image/arduino.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Dengan Arduino  saya berhasi membuat  projek pertama berupa simulasi rambu lalu lintas.</p>
+                        <p class="card-text">Simulasi Rambu lalu lintas menggunakan arduino</p>
                     </div>
                 </div>
             </div>
@@ -199,7 +200,7 @@
                 <div class="card" >
                     <img src="image/gopay.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Saya berhasil membuat replika User Interface dari aplikasi E-Money Gopay</p>
+                        <p class="card-text"> membuat replika User Interface dari aplikasi E-Money Gopay</p>
                     </div>
                 </div>
             </div>
@@ -207,7 +208,7 @@
                 <div class="card" >
                     <img src="image/project1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Saya telah membuat protofolio pribadi saya dalam bentuk website</p>
+                        <p class="card-text">Saya telah membuat protofolio pribadi saya dalam bentuk website menggunakan bootstrap,css dan JavaScript</p>
                     </div>
                 </div>
             </div>
