--- a/portofolio.html
+++ b/portofolio.html
@@ -24,7 +24,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li> <a href="#services">Services</a></li>
+                        <li> <a href="#skills">skills</a></li>
                       
                         <li><a href="#experience">experience</a></li>
                      <li><a href="#project">project</a></li>
@@ -65,11 +65,11 @@
  </section>
    
     <!-- header bawah -->
-    <section id="services">
+    <section id="skills">
         <!-- service 1 -->
 
         <div class="services main-container">
-            <h3 class="pre-tittle"> Services</h3>
+            <h3 class="pre-tittle"> skills</h3>
             <h1 class="section-title services title">Specialized in</h1>
 
 
